style: add to all comp header, fix sidebar bottom content overflow

--- a/src/frontend/ptd-lite-ui/src/css/sidebar.css
+++ b/src/frontend/ptd-lite-ui/src/css/sidebar.css
@@ -14,12 +14,6 @@
   z-index: 1000;
 }
 
-.sidebar .menu {
-  display: flex;
-  flex-direction: column;
-  height: calc(100% - 55px);
-}
-
 .sidebar header {
   display: flex;
   justify-content: space-between;
@@ -76,6 +70,13 @@
   justify-content: center;
 }
 
+.sidebar .menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: calc(100% - 45px);
+}
+
 /* ==== toggled navbar ==== */
 .sidebar.close {
   width: 88px;
@@ -114,6 +115,7 @@
 }
 
 /* ==== sidebar content ==== */
+
 .sidebar ul li {
   list-style: none;
   margin-top: 15px;
@@ -194,22 +196,16 @@
   display: block;
 }
 
-/* ==== sidebar footer ==== */
-
-.sidebar footer {
-  margin-top: auto;
-}
-
 /* ==== outlet ==== */
 
 .outlet-wrapper {
   position: absolute;
   top: 0;
   top: 0;
-  left: 250px;
+  left: 210px;
   height: 100vh;
-  width: calc(100% - 250px);
+  width: calc(100% - 210px);
   background-color: var(--body-color);
   transition: var(--tran-05);
-  padding: 12px 60px;
+  padding: 12px 30px;
 }
