--- a/src/frontend/ptd-lite-ui/src/index.css
+++ b/src/frontend/ptd-lite-ui/src/index.css
@@ -35,3 +35,22 @@ body {
   min-height: 100vh;
   background: var(--body-color);
 }
+
+.comp-header {
+  padding: 10px 0;
+  font-size: 14px;
+  display: flex;
+  opacity: 0.8;
+  color: var(--text-color);
+  font-weight: 600;
+  align-items: center;
+}
+
+.comp-header .icon-right {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.comp-header span {
+  padding: 0 10px;
+}
